fix: Header causing overflow.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  width: 100vw;
+  /* width: 100vw; */
   min-height: 110px;
   height: 110px;
   background-color: #000;
